--- a/frontend/gio-hang.html
+++ b/frontend/gio-hang.html
@@ -3,75 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>Giỏ hàng | BabyCutie</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gio-hang.css">
 </head>
 <body>
 
-<!-- ===== HEADER ===== -->
 <header class="header">
     <div class="container header-wrap">
-    <!-- ƯU ĐÃI -->
-<div id="uuDaiBox" class="mt-3"></div>
-
-        <!-- LOGO -->
-        <div class="logo">
-            <img src="images/logo2.jpg" alt="BabyCutie">
+        <div class="logo" onclick="location='index.html'">
+            <img src="images/logo2.jpg">
             <span>BabyCutie</span>
         </div>
-
-        <!-- MENU -->
-        <nav class="nav">
-            <a href="index.html">Trang chủ</a>
-            <a href="thuc-don.html">Thực đơn</a>
-            <a href="">Tin tức</a>
-            <a href="">Liên hệ</a>
-            <a class="active" href="gio-hang.html">Giỏ hàng</a>
-        </nav>
-
+        <button class="btn-login" onclick="location='thuc-don.html'">
+            ← Tiếp tục mua
+        </button>
     </div>
 </header>
 
-<!-- ===== CONTENT ===== -->
-<section class="container mt-5 mb-5">
-    <h3 class="mb-4">🛒 Giỏ hàng của bạn</h3>
+<section class="container mt-4">
+    <h2>🛒 Giỏ hàng của bạn</h2>
 
-    <!-- DANH SÁCH GIỎ HÀNG (JS render) -->
-    <div id="danhSachGioHang"></div>
+    <table class="table bg-white mt-3">
+        <thead>
+            <tr>
+                <th>Sản phẩm</th>
+                <th>Giá</th>
+                <th>Số lượng</th>
+                <th>Tạm tính</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody id="cartBody"></tbody>
+    </table>
 
-    <!-- TỔNG DINH DƯỠNG -->
-    <div class="nutrition-summary mt-4">
-        <h6>Tổng dinh dưỡng (ước tính)</h6>
-        <div>
-            🥩 Protein: <b id="tongProtein">0g</b> |
-            🍚 Carb: <b id="tongCarb">0g</b> |
-            🧈 Chất béo: <b id="tongFat">0g</b>
-        </div>
-    </div>
+    <h4 class="text-end">
+        Tổng tiền: <span id="tongTien">0</span>đ
+    </h4>
 
-    <!-- TỔNG TIỀN + THANH TOÁN -->
-    <div class="total-box mt-4">
-        <h5>
-            Tổng tiền:
-            <span id="tongTien">0đ</span>
-        </h5>
-
-        <button class="btn-checkout" onclick="thanhToan()">
-            Thanh toán
+    <!-- ===== NHẬP MÃ KHUYẾN MÃI ===== -->
+    <div class="mt-3">
+        <input type="text" id="maKhuyenMai" placeholder="Nhập mã khuyến mãi">
+        <button onclick="apDungKhuyenMai()">
+            Áp dụng
         </button>
     </div>
+
+    <!-- ===== PHƯƠNG THỨC THANH TOÁN ===== -->
+    <div class="mt-3">
+        <label>
+            <input type="radio" name="pttt" value="COD" checked>
+            Thanh toán khi nhận hàng (COD)
+        </label>
+        <br>
+        <label>
+            <input type="radio" name="pttt" value="Chuyển khoản">
+            Chuyển khoản ngân hàng
+        </label>
+    </div>
+
+    <button class="btn-primary mt-3" onclick="datHang()">
+        Đặt hàng & Thanh toán
+    </button>
+
 </section>
 
-<!-- ===== JS (THỨ TỰ BẮT BUỘC) ===== -->
-<script src="js/cau-hinh.js"></script>
 <script src="js/gio-hang.js"></script>
-
 </body>
 </html>
