--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>BabyCutie – Cháo dinh dưỡng</title>
+    <title>BabyCutie – Cháo dinh dưỡng cho bé</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
@@ -12,48 +12,78 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 
 <!-- ================= HEADER ================= -->
 <header class="header">
     <div class="container header-wrap">
-        <div class="logo">
-            <img src="images/logo2.jpg">
+
+        <!-- LOGO -->
+        <div class="logo" onclick="window.location='index.html'">
+            <img src="images/logo2.jpg" alt="BabyCutie">
             <span>BabyCutie</span>
         </div>
 
+        <!-- SEARCH -->
         <div class="search">
             <i class="fa fa-search"></i>
-            <input type="text" id="searchInput" placeholder="Tìm món ăn...">
+            <input type="text" placeholder="Tìm món ăn cho bé...">
         </div>
 
-        <nav>
-            <a href="index.html">Trang chủ</a>
+        <!-- MENU -->
+        <nav class="main-menu">
+            <a href="index.html" class="active">Trang chủ</a>
             <a href="thuc-don.html">Thực đơn</a>
-            <a href="#">Tin tức</a>
-            <a href="#">Liên hệ</a>
+            <a href="tin-tuc.html">Tin tức</a>
+            <a href="lien-he.html">Liên hệ</a>
         </nav>
 
-        <!-- GIỎ HÀNG -->
-        <div class="cart-icon" onclick="window.location.href='gio-hang.html'">
+        <!-- CART -->
+        <div class="cart-icon" onclick="window.location='gio-hang.html'">
             <i class="fa-solid fa-cart-shopping"></i>
             <span class="cart-count" id="cartCount">0</span>
         </div>
 
-        <button class="btn-login">Đăng nhập / Đăng ký</button>
+        <!-- LOGIN -->
+        <div class="login-group">
+            <div class="dropdown">
+                <button class="btn-login dropdown-toggle" data-bs-toggle="dropdown">
+                    <i class="fa fa-user"></i> Đăng nhập
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="login-khach.html">
+                            👨‍👩‍👧 Khách hàng
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="login-admin.html">
+                            🛠 Admin
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
     </div>
 </header>
 
 <!-- ================= HERO ================= -->
 <section class="hero">
     <div class="container hero-wrap">
+
         <div class="hero-text">
-            <h1>Dinh dưỡng trọn vẹn<br>cho bé yêu khôn lớn</h1>
+            <h1>
+                Dinh dưỡng trọn vẹn <br>
+                cho bé yêu khôn lớn
+            </h1>
             <p>
-                Cháo dinh dưỡng BabyCutie – được nấu mỗi ngày
-                từ nguyên liệu tươi sạch, cân bằng dinh dưỡng cho bé.
+                Cháo dinh dưỡng BabyCutie được nấu mỗi ngày
+                từ nguyên liệu tươi sạch – an toàn – khoa học.
             </p>
+
             <div class="hero-btn">
                 <button class="btn-primary" onclick="window.location='thuc-don.html'">
                     Đặt món ngay
@@ -65,77 +95,124 @@
         </div>
 
         <div class="hero-img">
-            <img src="images/bn.jpg">
+            <img src="images/bn.jpg" alt="Cháo dinh dưỡng">
         </div>
+
     </div>
 </section>
 
-<!-- ================= LỢI ÍCH ================= -->
+<!-- ================= BENEFIT ================= -->
 <section class="benefit">
     <div class="container text-center">
-        <h2>Lợi ích tuyệt vời</h2>
-        <p class="sub">Chúng tôi cam kết chất lượng trong từng muỗng cháo</p>
+        <h2>Lợi ích khi chọn BabyCutie</h2>
+        <p class="sub">Chúng tôi đặt sức khỏe của bé lên hàng đầu</p>
 
-        <div class="row">
+        <div class="row mt-4">
             <div class="col-md-4">
                 <div class="benefit-card">
                     🌱
                     <h5>Nguyên liệu tươi sạch</h5>
-                    <p>100% nguyên liệu an toàn cho bé</p>
+                    <p>100% thực phẩm rõ nguồn gốc</p>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="benefit-card">
-                    🚚
-                    <h5>Giao hàng siêu tốc</h5>
-                    <p>Giao nhanh trong ngày</p>
-                </div>
-            </div>
+
             <div class="col-md-4">
                 <div class="benefit-card">
                     ❤️
                     <h5>Cân bằng dinh dưỡng</h5>
-                    <p>Thực đơn khoa học theo độ tuổi</p>
+                    <p>Thực đơn theo từng độ tuổi</p>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="benefit-card">
+                    🚚
+                    <h5>Giao hàng nhanh</h5>
+                    <p>Giao trong ngày – giữ trọn độ nóng</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<!-- ================= COMBO ================= -->
-<section class="promo">
-    <div class="container promo-box">
-        <div>
-            <h4>Combo Tuần Dinh Dưỡng – Tiết kiệm 15%</h4>
-            <p>Đăng ký thực đơn tuần cho bé</p>
-        </div>
-        <button class="btn-primary" id="btnUuDai">Nhận ưu đãi</button>
-    </div>
-</section>
-
-<!-- ================= SẢN PHẨM ================= -->
+<!-- ================= FEATURED PRODUCT ================= -->
 <section class="product">
     <div class="container">
         <div class="product-head">
             <h2>Sản phẩm nổi bật</h2>
-            <a href="thuc-don.html">Xem tất cả</a>
+            <a href="thuc-don.html">Xem tất cả →</a>
         </div>
 
-        <!-- JS render -->
-        <div class="row" id="sanPhamNoiBat"></div>
+        <div class="row" id="sanPhamNoiBat">
+            
+
+<div class="col-md-4">
+    <div class="product-card">
+        <img src="images/thitboraungot.jpg">
+
+        <h5>Cháo Thịt Bò Rau Ngót</h5>
+        <p class="price">40.000đ</p>
+
+        <ul class="ingredients">
+            <li>🥩 Thịt bò</li>
+            <li>🥬 Rau ngót</li>
+            <li>🌾 Gạo tẻ</li>
+        </ul>
+
+        <div class="nutrition">
+            <span>💪 Protein: <b>20g</b></span>
+            <span>🍚 Carb: <b>32g</b></span>
+            <span>🥑 Fat: <b>10g</b></span>
+        </div>
+
+        <button onclick="addToCart()">Thêm vào giỏ</button>
     </div>
-</section>
+</div>
 
-<!-- ================= NEWSLETTER ================= -->
-<section class="newsletter">
-    <div class="container text-center">
-        ✉️
-        <h5>Đăng ký nhận thực đơn mới nhất</h5>
-        <p>Nhận ưu đãi & thực đơn mới từ BabyCutie</p>
+<div class="col-md-4">
+    <div class="product-card">
+        <img src="images/supgangonon.jpg">
 
-        <div class="newsletter-form">
-            <input type="email" id="newsletterEmail" placeholder="Nhập email của bạn">
-            <button id="btnNewsletter">Đăng ký</button>
+        <h5>Cháo Gà Hạt Sen</h5>
+        <p class="price">42.000đ</p>
+
+        <ul class="ingredients">
+            <li>🍗 Thịt gà</li>
+            <li>🌰 Hạt sen</li>
+            <li>🌾 Gạo tẻ</li>
+        </ul>
+
+        <div class="nutrition">
+            <span>💪 Protein: <b>17g</b></span>
+            <span>🍚 Carb: <b>30g</b></span>
+            <span>🥑 Fat: <b>9g</b></span>
+        </div>
+
+        <button onclick="addToCart()">Thêm vào giỏ</button>
+    </div>
+</div>
+     <div class="col-md-4">
+    <div class="product-card">
+        <img src="images/tomhatsen.jpg">
+
+        <h5>Cháo Tôm Hạt Sen</h5>
+        <p class="price">42.000đ</p>
+
+        <ul class="ingredients">
+            <li>🦐 Tôm tươi</li>
+            <li>🌰 Hạt sen</li>
+            <li>🌾 Gạo tẻ</li>
+        </ul>
+
+        <div class="nutrition">
+            <span>💪 Protein: <b>20g</b></span>
+            <span>🍚 Carb: <b>22g</b></span>
+            <span>🥑 Fat: <b>12g</b></span>
+        </div>
+
+        <button onclick="addToCart()">Thêm vào giỏ</button>
+    </div>
+</div>
         </div>
     </div>
 </section>
@@ -145,18 +222,25 @@
     <div class="container footer-wrap">
         <div>
             <b>BabyCutie</b>
-            <p>Cháo dinh dưỡng cho bé</p>
+            <p>Cháo dinh dưỡng cho bé yêu</p>
         </div>
         <div>
-            <p>Hotline: 1900 1234</p>
-            <p>Email: babycutie@gmail.com</p>
+            <p>📞 Hotline: 1900 1234</p>
+            <p>📧 babycutie@gmail.com</p>
         </div>
     </div>
 </footer>
 
-<!-- ================= JS (THỨ TỰ BẮT BUỘC) ================= -->
-<script src="js/cart-core.js"></script>
-<script src="js/trang-chu.js"></script>
+<!-- ================= JS ================= -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+let count = 0;
+function addToCart() {
+    count++;
+    document.getElementById("cartCount").innerText = count;
+}
+</script>
 
 </body>
 </html>
