--- a/frontend/index.html
+++ b/frontend/index.html
@@ -146,76 +146,10 @@
         <div class="row" id="sanPhamNoiBat">
             
 
-<div class="col-md-4">
-    <div class="product-card">
-        <img src="images/thitboraungot.jpg">
-
-        <h5>Cháo Thịt Bò Rau Ngót</h5>
-        <p class="price">40.000đ</p>
-
-        <ul class="ingredients">
-            <li>🥩 Thịt bò</li>
-            <li>🥬 Rau ngót</li>
-            <li>🌾 Gạo tẻ</li>
-        </ul>
-
-        <div class="nutrition">
-            <span>💪 Protein: <b>20g</b></span>
-            <span>🍚 Carb: <b>32g</b></span>
-            <span>🥑 Fat: <b>10g</b></span>
-        </div>
-
-        <button onclick="addToCart()">Thêm vào giỏ</button>
-    </div>
+<div class="row" id="sanPhamNoiBat">
+    <!-- Sản phẩm sẽ được render từ API -->
 </div>
 
-<div class="col-md-4">
-    <div class="product-card">
-        <img src="images/supgangonon.jpg">
-
-        <h5>Cháo Gà Hạt Sen</h5>
-        <p class="price">42.000đ</p>
-
-        <ul class="ingredients">
-            <li>🍗 Thịt gà</li>
-            <li>🌰 Hạt sen</li>
-            <li>🌾 Gạo tẻ</li>
-        </ul>
-
-        <div class="nutrition">
-            <span>💪 Protein: <b>17g</b></span>
-            <span>🍚 Carb: <b>30g</b></span>
-            <span>🥑 Fat: <b>9g</b></span>
-        </div>
-
-        <button onclick="addToCart()">Thêm vào giỏ</button>
-    </div>
-</div>
-     <div class="col-md-4">
-    <div class="product-card">
-        <img src="images/tomhatsen.jpg">
-
-        <h5>Cháo Tôm Hạt Sen</h5>
-        <p class="price">42.000đ</p>
-
-        <ul class="ingredients">
-            <li>🦐 Tôm tươi</li>
-            <li>🌰 Hạt sen</li>
-            <li>🌾 Gạo tẻ</li>
-        </ul>
-
-        <div class="nutrition">
-            <span>💪 Protein: <b>20g</b></span>
-            <span>🍚 Carb: <b>22g</b></span>
-            <span>🥑 Fat: <b>12g</b></span>
-        </div>
-
-        <button onclick="addToCart()">Thêm vào giỏ</button>
-    </div>
-</div>
-        </div>
-    </div>
-</section>
 
 <!-- ================= FOOTER ================= -->
 <footer class="footer">
