--- a/frontend/thuc-don.html
+++ b/frontend/thuc-don.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<!-- HEADER -->
+<!-- ================= HEADER ================= -->
 <header class="header">
     <div class="container header-wrap">
         <div class="logo" onclick="location='index.html'">
@@ -29,34 +29,35 @@
     </div>
 </header>
 
-<!-- MAIN -->
+<!-- ================= MAIN ================= -->
 <section class="menu-page">
     <div class="container">
+
+        <!-- 🔽 CẤU TRÚC ROW CHUẨN CHO JS -->
         <div class="row">
 
-            <!-- ===== FILTER ===== -->
-            <aside class="col-lg-3 filter-box">
+            <!-- ================= FILTER (CỘT TRÁI) ================= -->
+            <aside class="col-md-3 filter-box">
                 <h5>☰ Bộ lọc</h5>
 
                 <div class="filter-group">
                     <h6>Danh mục</h6>
-                    <label><input type="checkbox" checked> Cháo Mặn</label>
-                    <label><input type="checkbox"> Cháo Rau Củ</label>
+                    <label><input type="checkbox" checked> Cháo Thịt</label>
+                    <label><input type="checkbox"> Cháo Cá</label>
                     <label><input type="checkbox"> Cháo Hạt & Ngũ Cốc</label>
-                    <label><input type="checkbox"> Pudding & Tráng Miệng</label>
                 </div>
 
                 <div class="filter-group">
                     <h6>Độ tuổi phù hợp</h6>
-                    <label><input type="checkbox"> 6 – 12 tháng</label>
-                    <label><input type="checkbox"> 1 – 3 tuổi</label>
+                    <label><input type="radio" name="age" value="6-12"> 6 – 12 tháng</label>
+                    <label><input type="radio" name="age" value="1-3"> 1 – 3 tuổi</label>
                 </div>
 
                 <div class="filter-group">
                     <h6>Khoảng giá</h6>
-                    <label><input type="checkbox"> Dưới 30.000đ</label>
-                    <label><input type="checkbox" checked> 30.000đ – 50.000đ</label>
-                    <label><input type="checkbox"> Trên 50.000đ</label>
+                    <label><input type="radio" name="gia"> Dưới 30.000đ</label>
+                    <label><input type="radio" name="gia"> 30.000đ – 50.000đ</label>
+                    <label><input type="radio" name="gia"> Trên 50.000đ</label>
                 </div>
 
                 <div class="combo-box">
@@ -66,8 +67,8 @@
                 </div>
             </aside>
 
-            <!-- ===== PRODUCT LIST ===== -->
-            <main class="col-lg-9">
+            <!-- ================= PRODUCT LIST (CỘT PHẢI) ================= -->
+            <main class="col-md-9">
 
                 <!-- TITLE -->
                 <div class="menu-head">
@@ -82,45 +83,12 @@
                     </select>
                 </div>
 
-                <!-- PRODUCTS -->
+                <!-- 🔽 JS SẼ RENDER SẢN PHẨM Ở ĐÂY -->
                 <div class="row g-4">
-
-                    <!-- CARD -->
-                    <div class="col-md-4">
-                        <div class="food-card">
-                            <span class="badge-hot">Best Seller</span>
-                            <img src="images/cahoibido.jpg">
-                            <h5>Cháo Cá Hồi & Súp Lơ</h5>
-                            <div class="rating">★★★★★ <span>(45)</span></div>
-                            <p class="price">45.000đ</p>
-                            <button class="btn-add">🛒 Thêm</button>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="food-card">
-                            <span class="badge-new">Mới</span>
-                            <img src="images/bido.jpg">
-                            <h5>Cháo Bí Đỏ & Phô Mai</h5>
-                            <div class="rating">★★★★★ <span>(12)</span></div>
-                            <p class="price">35.000đ</p>
-                            <button class="btn-add">🛒 Thêm</button>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="food-card">
-                            <img src="images/bo.jpg">
-                            <h5>Cháo Gạo Lứt & Bò</h5>
-                            <div class="rating">★★★★★ <span>(89)</span></div>
-                            <p class="price">42.000đ</p>
-                            <button class="btn-add">🛒 Thêm</button>
-                        </div>
-                    </div>
-
+                    <!-- sản phẩm từ API -->
                 </div>
 
-                <!-- PAGINATION -->
+                <!-- PAGINATION (GIỮ UI – CHƯA GẮN LOGIC) -->
                 <div class="pagination-box">
                     <button>‹</button>
                     <button class="active">1</button>
@@ -133,6 +101,167 @@
         </div>
     </div>
 </section>
+
+<!-- ================= JS ================= -->
 <script src="js/thuc-don.js"></script>
+<script>
+const API_URL = "http://127.0.0.1:5000/api/thuc-don";
+
+let danhSachSanPham = [];
+
+/* ===============================
+   LOAD SẢN PHẨM TỪ API
+================================ */
+function taiSanPham(thamSo = "") {
+    let url = API_URL + thamSo;
+
+    fetch(url)
+        .then(res => res.json())
+        .then(data => {
+            danhSachSanPham = data;
+            hienThiSanPham(data);
+        })
+        .catch(err => {
+            console.error(err);
+            alert("Không thể kết nối server");
+        });
+}
+
+/* ===============================
+   HIỂN THỊ SẢN PHẨM (FULL THÔNG TIN)
+================================ */
+function hienThiSanPham(ds) {
+    const khuVuc = document.querySelector(".col-md-9 .row");
+    let html = "";
+
+    if (!ds || ds.length === 0) {
+        khuVuc.innerHTML = "<p>Không có sản phẩm phù hợp</p>";
+        return;
+    }
+
+    ds.forEach(sp => {
+        html += `
+        <div class="col-md-4 mb-4">
+            <div class="product-card">
+
+                <img 
+                    src="http://127.0.0.1:5000/images/${sp.hinhAnh}" 
+                    alt="${sp.tenSanPham}"
+                >
+
+                <h5>${sp.tenSanPham}</h5>
+                <p class="price">${Number(sp.gia).toLocaleString()}đ</p>
+
+                <p class="desc">${sp.moTa || ""}</p>
+
+                <div class="nutrition">
+                    <span>💪 Protein <b>${sp.protein || 0}g</b></span>
+                    <span>🍚 Carb <b>${sp.carb || 0}g</b></span>
+                    <span>🥑 Fat <b>${sp.chatBeo || 0}g</b></span>
+                </div>
+
+                <small class="age">👶 Độ tuổi: ${sp.doTuoi || "6–24 tháng"}</small>
+
+                <button class="btn-add" onclick="themVaoGio(${sp.id})">
+                    🛒 Thêm vào giỏ
+                </button>
+
+            </div>
+        </div>
+        `;
+    });
+
+    khuVuc.innerHTML = html;
+}
+
+/* ===============================
+   TÌM KIẾM
+================================ */
+document.querySelector(".search-box input")?.addEventListener("input", function () {
+    const tuKhoa = this.value.toLowerCase();
+
+    const ketQua = danhSachSanPham.filter(sp =>
+        sp.tenSanPham.toLowerCase().includes(tuKhoa)
+    );
+
+    hienThiSanPham(ketQua);
+});
+
+/* ===============================
+   LỌC THEO ĐỘ TUỔI
+================================ */
+document.querySelectorAll("input[name='age']").forEach(radio => {
+    radio.addEventListener("change", function () {
+        taiSanPham(`?doTuoi=${this.value}`);
+    });
+});
+
+/* ===============================
+   LỌC THEO GIÁ
+================================ */
+document.querySelectorAll("input[name='gia']").forEach((radio, index) => {
+    radio.addEventListener("change", function () {
+        let ketQua = [];
+
+        if (index === 0) {
+            ketQua = danhSachSanPham.filter(sp => sp.gia < 30000);
+        } else if (index === 1) {
+            ketQua = danhSachSanPham.filter(sp => sp.gia >= 30000 && sp.gia <= 50000);
+        } else {
+            ketQua = danhSachSanPham.filter(sp => sp.gia > 50000);
+        }
+
+        hienThiSanPham(ketQua);
+    });
+});
+
+/* ===============================
+   SẮP XẾP
+================================ */
+document.querySelector("select")?.addEventListener("change", function () {
+    let ds = [...danhSachSanPham];
+
+    if (this.value.includes("thấp")) {
+        ds.sort((a, b) => a.gia - b.gia);
+    } else if (this.value.includes("cao")) {
+        ds.sort((a, b) => b.gia - a.gia);
+    }
+
+    hienThiSanPham(ds);
+});
+
+/* ===============================
+   GIỎ HÀNG (LOCAL STORAGE)
+================================ */
+function themVaoGio(id) {
+    let gioHang = JSON.parse(localStorage.getItem("gioHang")) || [];
+
+    const sanPham = danhSachSanPham.find(sp => sp.id === id);
+    if (!sanPham) return;
+
+    const tonTai = gioHang.find(sp => sp.id === id);
+
+    if (tonTai) {
+        tonTai.soLuong += 1;
+    } else {
+        gioHang.push({
+            id: sanPham.id,
+            tenSanPham: sanPham.tenSanPham,
+            gia: sanPham.gia,
+            hinhAnh: sanPham.hinhAnh,
+            soLuong: 1
+        });
+    }
+
+    localStorage.setItem("gioHang", JSON.stringify(gioHang));
+    alert("✅ Đã thêm vào giỏ hàng");
+}
+
+/* ===============================
+   LOAD BAN ĐẦU
+================================ */
+taiSanPham();
+</script>
+
 </body>
 </html>
