--- a/frontend/thuc-don.html
+++ b/frontend/thuc-don.html
@@ -1,34 +1,54 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<title>Thực đơn cháo dinh dưỡng | BabyCutie</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>BabyCutie – Cháo dinh dưỡng cho bé</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/thuc-don.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/thuc-don.css">
 </head>
 <body>
 
 <!-- ================= HEADER ================= -->
 <header class="header">
     <div class="container header-wrap">
-        <div class="logo" onclick="location='index.html'">
-            <img src="images/logo2.jpg">
+
+        <!-- LOGO -->
+        <div class="logo" onclick="window.location='index.html'">
+            <img src="images/logo2.jpg" alt="BabyCutie">
             <span>BabyCutie</span>
         </div>
-        <nav>
+
+        <!-- SEARCH -->
+        <div class="search">
+            <i class="fa fa-search"></i>
+            <input type="text" placeholder="Tìm món ăn cho bé...">
+        </div>
+
+        <!-- MENU -->
+        <nav class="main-menu">
             <a href="index.html">Trang chủ</a>
             <a href="thuc-don.html" class="active">Thực đơn</a>
             <a href="tin-tuc.html">Tin tức</a>
             <a href="lien-he.html">Liên hệ</a>
         </nav>
+
+        <!-- CART -->
+        <div class="cart-icon" onclick="window.location='gio-hang.html'">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <span class="cart-count" id="cartCount">0</span>
+        </div>
+
+
     </div>
 </header>
-
 <!-- ================= MAIN ================= -->
 <section class="menu-page">
     <div class="container">
@@ -88,22 +108,13 @@
                     <!-- sản phẩm từ API -->
                 </div>
 
-                <!-- PAGINATION (GIỮ UI – CHƯA GẮN LOGIC) -->
-                <div class="pagination-box">
-                    <button>‹</button>
-                    <button class="active">1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>›</button>
-                </div>
-
             </main>
         </div>
     </div>
 </section>
 
 <!-- ================= JS ================= -->
-<script src="js/thuc-don.js"></script>
+
 <script>
 const API_URL = "http://127.0.0.1:5000/api/thuc-don";
 
@@ -146,7 +157,7 @@ function hienThiSanPham(ds) {
 
                 <img 
                     src="http://127.0.0.1:5000/images/${sp.hinhAnh}" 
-                    alt="${sp.tenSanPham}"
+                    
                 >
 
                 <h5>${sp.tenSanPham}</h5>
@@ -261,6 +272,42 @@ function themVaoGio(id) {
    LOAD BAN ĐẦU
 ================================ */
 taiSanPham();
+</script>
+<script>
+function themVaoGio(id) {
+    let gioHang = JSON.parse(localStorage.getItem("gioHang")) || [];
+
+    const sanPham = danhSachSanPham.find(sp => sp.id === id);
+    if (!sanPham) return;
+
+    const tonTai = gioHang.find(item => item.id === id);
+
+    if (tonTai) {
+        tonTai.soLuong += 1;
+    } else {
+        gioHang.push({
+            id: sanPham.id,
+            tenSanPham: sanPham.tenSanPham,
+            gia: sanPham.gia,
+            hinhAnh: sanPham.hinhAnh,
+            soLuong: 1
+        });
+    }
+
+    localStorage.setItem("gioHang", JSON.stringify(gioHang));
+    capNhatSoLuongGio();
+
+    alert("✅ Đã thêm vào giỏ hàng");
+}
+
+function capNhatSoLuongGio() {
+    let gioHang = JSON.parse(localStorage.getItem("gioHang")) || [];
+    let tong = gioHang.reduce((sum, sp) => sum + sp.soLuong, 0);
+    document.getElementById("cartCount").innerText = tong;
+}
+
+// khi load lại trang
+capNhatSoLuongGio();
 </script>
 
 </body>
