--- a/frontend/gio-hang.html
+++ b/frontend/gio-hang.html
@@ -68,12 +68,14 @@
 
 <!-- ================= JS GIỎ HÀNG (NHÚNG TRỰC TIẾP) ================= -->
 <script>
-/* ===============================
-   GIỎ HÀNG – DỰA CSDL CHAO BABY CUTIE
-================================ */
+const API_GIO_HANG = "http://127.0.0.1:5000/api/gio-hang";
+const IMAGE_URL = "http://127.0.0.1:5000/images/";
+const token = localStorage.getItem("token");
 
-// demo: sau login bạn nên lưu nguoiDung_id
-const nguoiDung_id = 2; // Nguyễn Thị Lan (demo)
+if (!token) {
+    alert("Vui lòng đăng nhập");
+    window.location.href = "login-khach.html";
+}
 
 const cartBody = document.getElementById("cartBody");
 const tongTienEl = document.getElementById("tongTien");
@@ -82,31 +84,38 @@ const tongTienEl = document.getElementById("tongTien");
    LOAD GIỎ HÀNG
 ================================ */
 function loadCart() {
-    fetch(`http://127.0.0.1:5000/api/gio-hang/${nguoiDung_id}`)
-        .then(res => res.json())
-        .then(data => {
-            cartBody.innerHTML = "";
-            let tong = 0;
+    fetch(API_GIO_HANG, {
+        headers: {
+            "Authorization": "Bearer " + token
+        }
+    })
+    .then(res => res.json())
+    .then(data => {
+        cartBody.innerHTML = "";
+        let tong = 0;
 
-            if (!data || data.length === 0) {
-                cartBody.innerHTML = `
-                    <tr>
-                        <td colspan="5" style="text-align:center">
-                            🛒 Giỏ hàng trống
-                        </td>
-                    </tr>
-                `;
-                tongTienEl.innerText = 0;
-                return;
-            }
-
-            data.forEach(item => {
-                const tamTinh = item.gia * item.soLuong;
-                tong += tamTinh;
-
-                cartBody.innerHTML += `
+        if (data.length === 0) {
+            cartBody.innerHTML = `
                 <tr>
-                    <td>${item.tenSanPham}</td>
+                    <td colspan="5" style="text-align:center">
+                        🛒 Giỏ hàng trống
+                    </td>
+                </tr>
+            `;
+            tongTienEl.innerText = 0;
+            return;
+        }
+
+        data.forEach(item => {
+            const tamTinh = item.gia * item.soLuong;
+            tong += tamTinh;
+
+            cartBody.innerHTML += `
+                <tr>
+                    <td>
+                        <img src="${IMAGE_URL + item.hinhAnh}" width="60"><br>
+                        ${item.tenSanPham}
+                    </td>
                     <td>${item.gia.toLocaleString()}đ</td>
                     <td>
                         <input type="number" min="1"
@@ -118,112 +127,34 @@ function loadCart() {
                         <button onclick="removeItem(${item.gioHang_id})">❌</button>
                     </td>
                 </tr>
-                `;
-            });
-
-            tongTienEl.innerText = tong.toLocaleString();
-        })
-        .catch(err => {
-            console.error(err);
-            alert("Không tải được giỏ hàng");
+            `;
         });
-}
 
-/* ===============================
-   CẬP NHẬT SỐ LƯỢNG
-================================ */
-function updateQty(id, soLuong) {
-    fetch(`http://127.0.0.1:5000/api/gio-hang/${id}`, {
-        method: "PUT",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ soLuong: soLuong })
-    }).then(loadCart);
-}
-
-/* ===============================
-   XÓA SẢN PHẨM
-================================ */
-function removeItem(id) {
-    fetch(`http://127.0.0.1:5000/api/gio-hang/${id}`, {
-        method: "DELETE"
-    }).then(loadCart);
-}
-
-/* ===============================
-   ĐẶT HÀNG + THANH TOÁN
-================================ */
-function datHang() {
-    const phuongThuc = document.querySelector(
-        "input[name='pttt']:checked"
-    ).value;
-
-    fetch("http://127.0.0.1:5000/api/don-hang", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-            nguoiDung_id: nguoiDung_id,
-            diaChiGiaoHang: "TP Hồ Chí Minh"
-        })
-    })
-    .then(res => res.json())
-    .then(data => {
-        return fetch("http://127.0.0.1:5000/api/thanh-toan", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-                donHang_id: data.donHang_id,
-                phuongThuc: phuongThuc
-            })
-        });
-    })
-    .then(res => res.json())
-    .then(() => {
-        alert("🎉 Đặt hàng & thanh toán thành công!");
-        loadCart();
-    })
-    .catch(err => {
-        alert("Có lỗi xảy ra khi đặt hàng!");
-        console.error(err);
+        tongTienEl.innerText = tong.toLocaleString();
     });
 }
 
 /* ===============================
-   ÁP DỤNG KHUYẾN MÃI
+   UPDATE / DELETE
 ================================ */
-function apDungKhuyenMai() {
-    const ma = document.getElementById("maKhuyenMai").value;
+function updateQty(id, soLuong) {
+    fetch(`${API_GIO_HANG}/${id}`, {
+        method: "PUT",
+        headers: {
+            "Content-Type": "application/json",
+            "Authorization": "Bearer " + token
+        },
+        body: JSON.stringify({ soLuong })
+    }).then(loadCart);
+}
 
-    if (!ma) {
-        alert("Vui lòng nhập mã khuyến mãi");
-        return;
-    }
-
-    fetch("http://127.0.0.1:5000/api/don-hang")
-        .then(res => res.json())
-        .then(ds => {
-            const donHangMoiNhat = ds.find(d => d.hoTen);
-
-            return fetch("http://127.0.0.1:5000/api/khuyen-mai/ap-dung", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    donHang_id: donHangMoiNhat.id,
-                    maKhuyenMai: ma
-                })
-            });
-        })
-        .then(res => res.json())
-        .then(data => {
-            alert(
-                "Áp mã thành công! Giảm: " +
-                data.soTienGiam.toLocaleString() + "đ"
-            );
-            document.getElementById("tongTien").innerText =
-                data.tongTienMoi.toLocaleString();
-        })
-        .catch(() => {
-            alert("Mã không hợp lệ hoặc đã hết hạn");
-        });
+function removeItem(id) {
+    fetch(`${API_GIO_HANG}/${id}`, {
+        method: "DELETE",
+        headers: {
+            "Authorization": "Bearer " + token
+        }
+    }).then(loadCart);
 }
 
 /* ===============================
@@ -231,6 +162,9 @@ function apDungKhuyenMai() {
 ================================ */
 loadCart();
 </script>
+
+loadCart();
+
 
 </body>
 </html>
