--- a/frontend/admin-don-hang.html
+++ b/frontend/admin-don-hang.html
@@ -1,50 +1,71 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <title>Quản lý đơn hàng | Admin BabyCutie</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<title>Admin – Quản lý đơn hàng</title>
+<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-<!-- HEADER -->
-<header class="header">
-    <div class="container header-wrap">
-        <div class="logo">
-            <span>🧾 Quản lý đơn hàng</span>
-        </div>
+<h2>📦 Quản lý đơn hàng</h2>
 
-        <button class="btn-login" onclick="location='admin-dashboard.html'">
-            ← Dashboard
-        </button>
-    </div>
-</header>
+<table border="1" cellpadding="10" width="100%">
+<thead>
+<tr>
+    <th>ID</th>
+    <th>Khách hàng</th>
+    <th>Điện thoại</th>
+    <th>Tổng tiền</th>
+    <th>Trạng thái</th>
+    <th>Hành động</th>
+</tr>
+</thead>
+<tbody id="donHangBody"></tbody>
+</table>
 
-<!-- CONTENT -->
-<section class="container mt-4">
+<script>
+fetch("http://127.0.0.1:5000/api/admin/don-hang")
+.then(res => res.json())
+.then(data => {
+    const body = document.getElementById("donHangBody");
+    body.innerHTML = "";
 
-    <h3 class="mb-3">Danh sách đơn hàng</h3>
+    data.forEach(dh => {
+        body.innerHTML += `
+        <tr>
+            <td>${dh.id}</td>
+            <td>${dh.hoTen}</td>
+            <td>${dh.dienThoai}</td>
+            <td>${dh.tongTien.toLocaleString()}đ</td>
+            <td>
+                <select onchange="capNhat(${dh.id}, this.value)">
+                    <option ${dh.trangThai=="Chờ xác nhận"?"selected":""}>Chờ xác nhận</option>
+                    <option ${dh.trangThai=="Đang giao"?"selected":""}>Đang giao</option>
+                    <option ${dh.trangThai=="Hoàn thành"?"selected":""}>Hoàn thành</option>
+                    <option ${dh.trangThai=="Đã hủy"?"selected":""}>Đã hủy</option>
+                </select>
+            </td>
+            <td>
+                <button onclick="xemChiTiet(${dh.id})">👁 Xem</button>
+            </td>
+        </tr>
+        `;
+    });
+});
 
-    <table class="table table-bordered table-hover bg-white">
-        <thead class="table-light">
-            <tr>
-                <th>#</th>
-                <th>Khách hàng</th>
-                <th>SĐT</th>
-                <th>Tổng tiền</th>
-                <th>Trạng thái</th>
-                <th>Hành động</th>
-            </tr>
-        </thead>
-        <tbody id="orderTable"></tbody>
-    </table>
+function capNhat(id, trangThai) {
+    fetch(`http://127.0.0.1:5000/api/admin/don-hang/${id}/trang-thai`, {
+        method: "PUT",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({ trangThai })
+    })
+    .then(() => alert("✔️ Cập nhật thành công"));
+}
 
-</section>
+function xemChiTiet(id) {
+    window.location.href = `admin-chi-tiet-don.html?id=${id}`;
+}
+</script>
 
-<script src="js/admin-don-hang.js"></script>
 </body>
 </html>
